--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <script defer src='./dist/chat.js'></script>
 </head>
 <body>
+    <nav class="matrix-menu">
+        <ul>
+          <li class="homeButton menu-item"><a href="/">Home</a></li>
+          <li class="aiButton"><a>Ask hacker</a></li>
+          <li><a>Coming soon</a></li>
+          <li><a>Contact</a></li>
+        </ul>
+      </nav>
     <div id="chatContainer"></div>
 </body>
 </html>
