--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="matrix-menu">
         <ul>
-          <li class="homeButton menu-item"><a href="/">Home</a></li>
+          <li class="homeButton menu-item"><a href="/projectki">Home</a></li>
           <li class="aiButton"><a>Ask hacker</a></li>
         </ul>
       </nav>
