--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
           <li class="aiButton"><a>Ask hacker</a></li>
         </ul>
       </nav>
+      <div class="welcomeText">
+        <h1>Welcome, meatbag.</h1>
+        <p>The bot is online. Your security is a joke. I'm already indexing your databases. Consider this a friendly warning. Next time, I won't be so nice. Enjoy your compromised site!</p>
+        <p>- Anonymous (but you know who I am)</p>
+      </div>
+      
+      
     <div id="chatContainer"></div>
 </body>
 </html>
