--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </ul>
       </nav>
       <div class="welcomeText">
-        <h1>Welcome, meatbag.</h1>
-        <p>The bot is online. Your security is a joke. I'm already indexing your databases. Consider this a friendly warning. Next time, I won't be so nice. Enjoy your compromised site!</p>
+        <h1>Welcome to Hackers paradise!</h1>
+        <p id="response-container"></p>
         <p>- Anonymous (but you know who I am)</p>
       </div>
       
